# airflow_2025_4th_meetup

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: sequence.md
src/airflow_compat_demo/: __init__.py  cli.py  defaults.py  models.py  versioning.py
src/airflow_compat_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_defaults.py  test_versioning.py
